--- a/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
+++ b/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
                         <segue destination="RMx-3f-FxP" kind="relationship" relationship="masterViewController" id="BlO-5A-QYV"/>
-                        <segue destination="Qah-eN-Glk" kind="relationship" relationship="detailViewController" id="PaR-S0-78L"/>
+                        <segue destination="WHK-2t-y8N" kind="relationship" relationship="detailViewController" id="gnw-JH-eGf"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cZU-Oi-B1e" sceneMemberID="firstResponder"/>
@@ -64,7 +64,7 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <connections>
-                                            <segue destination="Qah-eN-Glk" kind="showDetail" trigger="accessoryAction" id="EJP-EW-YBE"/>
+                                            <segue destination="WHK-2t-y8N" kind="showDetail" id="5mn-79-rbf"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="New Entry" textLabel="0e2-wi-P3W" style="IBUITableViewCellStyleDefault" id="07J-on-xgy">
@@ -293,33 +293,6 @@
             </objects>
             <point key="canvasLocation" x="694" y="-630"/>
         </scene>
-        <!--My Entries-->
-        <scene sceneID="Nl4-xv-t2G">
-            <objects>
-                <tableViewController id="lsF-bK-44C" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="byK-Tz-eNI">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="tte-8L-Lfa">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tte-8L-Lfa" id="aCn-M7-08n">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="lsF-bK-44C" id="7yO-po-tJm"/>
-                            <outlet property="delegate" destination="lsF-bK-44C" id="fva-z6-uHu"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="My Entries" id="mYE-Cf-urg"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HnG-K5-MJl" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="694" y="91"/>
-        </scene>
         <!--Detail-->
         <scene sceneID="k8R-ie-Fh2">
             <objects>
@@ -427,9 +400,6 @@ document layout — There is some information that is relevant for navigation th
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="New Entry" id="NFf-Ve-gqI"/>
-                    <connections>
-                        <outlet property="searchDisplayController" destination="OVc-46-C6Z" id="iog-OS-re8"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n6H-TR-5Ma" sceneMemberID="firstResponder"/>
                 <searchDisplayController id="aT4-Ay-1S2">
@@ -921,22 +891,49 @@ document layout — There is some information that is relevant for navigation th
             <point key="canvasLocation" x="-40" y="6501"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="Wiy-kp-7VO">
+        <scene sceneID="huQ-Cq-78I">
             <objects>
-                <navigationController id="Qah-eN-Glk" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="8df-um-MhA">
+                <navigationController id="WHK-2t-y8N" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="iuw-JD-3Tv">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="lsF-bK-44C" kind="relationship" relationship="rootViewController" id="Y3x-Zb-gcg"/>
+                        <segue destination="jOK-yO-Eaf" kind="relationship" relationship="rootViewController" id="H5H-lV-u7L"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="LcK-Uv-o40" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Zf-20-8TS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-40" y="91"/>
+            <point key="canvasLocation" x="-40" y="113"/>
+        </scene>
+        <!--My Entries-->
+        <scene sceneID="WdR-4f-3m2">
+            <objects>
+                <tableViewController id="jOK-yO-Eaf" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Np5-ir-5dO">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ijM-kZ-CBd">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ijM-kZ-CBd" id="Zqg-9X-Yhz">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="jOK-yO-Eaf" id="bMe-bR-L4T"/>
+                            <outlet property="delegate" destination="jOK-yO-Eaf" id="Z1I-bB-Jis"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="My Entries" id="MA5-iZ-sT4"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RAZ-KT-bUV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="704" y="122"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="EJP-EW-YBE"/>
+        <segue reference="5mn-79-rbf"/>
     </inferredMetricsTieBreakers>
 </document>
