--- a/HW-3/HW-3/Base.lproj/Main.storyboard
+++ b/HW-3/HW-3/Base.lproj/Main.storyboard
@@ -76,7 +76,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="m47-VK-3fh">
-                                <rect key="frame" x="0.0" y="914" width="768" height="90"/>
+                                <rect key="frame" x="0.0" y="1030" width="768" height="90"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" id="X1A-RI-C0X">
@@ -161,15 +161,20 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.75" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.82745098039999998" green="0.82745098039999998" blue="0.82745098039999998" alpha="0.75" colorSpace="custom" customColorSpace="sRGB"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="gxs-Uw-ZSw">
-                        <barButtonItem key="rightBarButtonItem" title="Image Filters" id="EvP-CL-FNg"/>
+                        <barButtonItem key="rightBarButtonItem" title="Image Filters" id="EvP-CL-FNg">
+                            <connections>
+                                <action selector="imageFiltersButtonTapped:" destination="FsK-CE-JgV" id="3zD-en-KSG"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="imageFiltersScrollView" destination="m47-VK-3fh" id="eKh-cp-BJ5"/>
                         <outlet property="theImage" destination="2fn-by-wxj" id="H0W-Rn-aqe"/>
                     </connections>
                 </viewController>
